--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,24 +1,14 @@
 .App {
-  display: flex;
-  flex-direction: column;
   margin: 0; }
 
-#quilt {
+.container {
   width: 100vw;
-  height: 100vw;
-  border: 2px solid grey;
+  height: 100vh;
   display: flex;
-  flex-wrap: wrap;
-  box-sizing: border-box; }
-  #quilt div {
-    display: flex;
-    flex-wrap: wrap; }
-  #quilt .region {
-    width: 50%;
-    height: 50%; }
-  #quilt .block {
-    width: 10%;
-    height: 10%; }
-  #quilt .pixel {
-    width: 2%;
-    height: 2%; }
+  justify-content: center;
+  align-items: center; }
+
+#quilt {
+  width: 750px;
+  height: 750px;
+  border: 1px solid black; }
