--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,30 +1,15 @@
 .App {
-    display: flex;
-    flex-direction: column;
     margin: 0;
 }
 
-#quilt {
-    width: 100vw; height: 100vw;
-    border: 2px solid grey;
+.container {
+    width: 100vw; height: 100vh;
     display: flex;
-    flex-wrap: wrap;
-    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+}
 
-    div {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .region {
-        width: 50%; height: 50%;
-    }
-
-    .block {
-        width: 10%; height: 10%;
-    }
-
-    .pixel {
-        width: 2%; height: 2%;
-    }
+#quilt {
+    width: 750px; height: 750px;
+    border: 1px solid black;
 }
