🔎 Started zoom functionality

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,6 +9,6 @@
   align-items: center; }
 
 #quilt {
-  width: 750px;
-  height: 750px;
+  width: 95vh;
+  height: 95vh;
   border: 1px solid black; }
