--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -10,6 +10,7 @@
 }
 
 #quilt {
-    width: 750px; height: 750px;
+    // width: 750px; height: 750px;
+    width: 95vh; height: 95vh;
     border: 1px solid black;
 }
