--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,14 +1,19 @@
 .App {
-  margin: 0; }
+  margin: 0;
+  padding: 0; }
 
 .container {
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  margin: 0;
+  padding: 0; }
 
 #quilt {
-  width: 95vh;
-  height: 95vh;
-  border: 1px solid black; }
+  width: 100vh;
+  height: 100vh;
+  border: 1px solid black;
+  margin: 0;
+  padding: 0; }
