--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,20 +1,27 @@
 .App {
-    margin: 0;
-    padding: 0;
-}
-
-.container {
     width: 100vw; height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
     padding: 0;
-}
 
-#quilt {
-    width: 100vh; height: 100vh;
-    border: 1px solid black;
-    margin: 0;
-    padding: 0;
+    div {
+        width: calc(100vw / 2 - 100vh / 2);
+        height: 100vh;
+        padding: 2vh 2vw;
+        box-sizing: border-box;
+
+        p {
+            margin: 8vh 0;
+        }
+    }
+
+    #quilt {
+        width: 100vh; height: 100vh;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
+        margin: 0;
+        padding: 0;
+    }
 }
