--- a/src/css/App.css
+++ b/src/css/App.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: top;
+    align-items: flex-start;
     padding: 0; }
     .App #palette .color {
       width: 6vh;
