--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -23,7 +23,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        align-items: top;
+        align-items: flex-start;
         padding: 0;
 
         .color {
