--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: karmaticArcade;
+    src: url('../fonts/karmatic-arcade.ttf');
+}
+
 .App {
     width: 100vw; height: 100vh;
     display: flex;
@@ -6,26 +11,41 @@
     margin: 0;
     padding: 0;
 
-    div {
+    > div {
         width: calc(100vw / 2 - 100vh / 2);
         height: 100vh;
-        padding: 3vh 2vw;
         box-sizing: border-box;
+        background-image: url('../images/tile.png');
+        background-size: 100%;
+    }
+
+    .splash {
+        background-position: right top;
+
+        h1 {
+            -webkit-margin-before: 0;
+            -webkit-margin-after: 0;
+            padding: 10%;
+            font-family: karmaticArcade;
+            font-size: calc(100vw / 12 - 100vh / 12);
+            mask-image: linear-gradient(top, rgba(0,0,0,1), rgba(0,0,0,.7) 50%, rgba(0,0,0,1));
+        }
+    }
+
+    .palette {
+        background-position: left top;
     }
 
     #palette {
-        width: 12vh;
-        height: 54vh;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        padding: 0;
+        width: 7vw;
+        max-width: 80%;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        margin: 10%;
+        box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
 
         .color {
-            width: 6vh;
-            height: 6vh;
-            padding: 0;
+            padding-top: 100%;
         }
 
         #color247a23 {
@@ -104,8 +124,8 @@
 
     #quilt {
         width: 100vh; height: 100vh;
-        border-left: 1px solid black;
-        border-right: 1px solid black;
+        border-left: 1px solid #eeeeee;
+        border-right: 1px solid #eeeeee;
         margin: 0;
         padding: 0;
     }
