🎨 Added color picker to side bar

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -26,15 +26,26 @@
       font-size: calc(100vw / 12 - 100vh / 12);
       mask-image: linear-gradient(top, black, rgba(0, 0, 0, 0.7) 50%, black); }
   .App .palette {
-    background-position: left top; }
+    background-position: left top;
+    display: flex; }
+    .App .palette .picker {
+      margin: 5%; }
+    .App .palette input[type='color'] {
+      width: 7vw;
+      height: 7vw; }
+    .App .palette .picker-card {
+      width: 90% !important;
+      visibility: hidden; }
   .App #palette {
     width: 7vw;
     max-width: 80%;
     display: grid;
     grid-template-columns: 50% 50%;
-    margin: 10%;
+    margin: 5%;
+    margin-bottom: auto;
     box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6); }
     .App #palette .color {
+      height: 0;
       padding-top: 100%; }
     .App #palette #color247a23 {
       background-color: #247a23; }
