✅ Solved codeclimate issues

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: karmaticArcade;
-    src: url('../fonts/karmatic-arcade.ttf') formate('truetype');
+    src: url('../fonts/karmatic-arcade.ttf') format('truetype');
 }
 
 .App {
