--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -58,85 +58,13 @@
         grid-template-columns: 50% 50%;
         margin: 5%;
         margin-bottom: auto;
-        box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+        // box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+        // background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAaUlEQVQoU12PCw2AMAwFbzaGDLCBDXSgAxvYABlgY+RgWxqaLOnn+vqWgBE4+WIFNuCudUk1EZorYCsDF5Aa4OYelAowqCTg0GeodLhZ62yiXL8JTNFTJ9vNv6cG9JvhN68nAYdRaYmeHot9F9X2eFD0AAAAAElFTkSuQmCC) repeat;
 
         .color {
             height: 0;
             padding-top: 100%;
         }
-
-        #color247a23 {
-            background-color: #247a23;
-        }
-
-        #color30bf2e {
-            background-color: #30bf2e;
-        }
-
-        #color269e8c {
-            background-color: #269e8c;
-        }
-
-        #color205988 {
-            background-color: #205988;
-        }
-
-        #color37abe4 {
-            background-color: #37abe4;
-        }
-
-        #color8300dc {
-            background-color: #8300dc;
-        }
-
-        #colorac0f5f {
-            background-color: #ac0f5f;
-        }
-
-        #colorf42618 {
-            background-color: #f42618;
-        }
-
-        #colore9671d {
-            background-color: #e9671d;
-        }
-
-        #colorf29221 {
-            background-color: #f29221;
-        }
-
-        #colorff78e9 {
-            background-color: #ff78e9;
-        }
-
-        #colorffcd94 {
-            background-color: #ffcd94;
-        }
-
-        #colorf0ee4d {
-            background-color: #f0ee4d;
-        }
-
-        #color8b4513 {
-            background-color: #8b4513;
-        }
-
-        #colorffffff {
-            background-color: #ffffff;
-        }
-
-        #colord4d4d4 {
-            background-color: #d4d4d4;
-        }
-
-        #color868686 {
-            background-color: #868686;
-        }
-
-        #color000000 {
-            background-color: #000000;
-        }
-
     }
 
     #quilt {
