--- a/src/css/App.css
+++ b/src/css/App.css
@@ -25,27 +25,72 @@
       font-family: karmaticArcade;
       font-size: calc(100vw / 12 - 100vh / 12);
       -webkit-mask-image: linear-gradient(to top, black, rgba(0, 0, 0, 0.7) 50%, black); }
+  .App input[type=button] {
+    width: 100%;
+    border: 1px solid #888;
+    background: #fff;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#fff));
+    background: -webkit-linear-gradient(top, #ccc, #fff);
+    background: -moz-linear-gradient(top, #ccc, #fff);
+    background: -ms-linear-gradient(top, #ccc, #fff);
+    background: -o-linear-gradient(top, #ccc, #fff);
+    text-shadow: rgba(0, 0, 0, 0.2) 0 1px 0;
+    color: black;
+    font-size: 0.8vw;
+    font-family: Georgia, serif; }
+  .App input[type=button]:hover {
+    background: #ccc;
+    background: -webkit-gradient(linear, left top, left bottom, from(#999), to(#ccc));
+    background: -webkit-linear-gradient(top, #999, #ccc);
+    background: -moz-linear-gradient(top, #999, #ccc);
+    background: -ms-linear-gradient(top, #999, #ccc);
+    background: -o-linear-gradient(top, #999, #ccc);
+    border: 1px solid #555; }
+  .App input[type=button]:active {
+    background: #bbb;
+    background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#bbb));
+    background: -webkit-linear-gradient(top, #888, #bbb);
+    background: -moz-linear-gradient(top, #888, #bbb);
+    background: -ms-linear-gradient(top, #888, #bbb);
+    background: -o-linear-gradient(top, #888, #bbb);
+    border: 1px solid #444; }
+  .App input[type=button]:focus {
+    outline: 0; }
   .App .palette {
     background-position: left top;
     display: flex; }
     .App .palette .picker {
       margin: 5%; }
+      .App .palette .picker div {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end; }
+        .App .palette .picker div input[type=button] {
+          width: calc(7vw + 6px);
+          border-bottom: none; }
+        .App .palette .picker div input[type=button]:hover, .App .palette .picker div input[type=button]:active {
+          border-bottom: none; }
     .App .palette input[type='color'] {
       width: 7vw;
       height: 7vw; }
     .App .palette .picker-card {
       width: 90% !important;
       visibility: hidden; }
-  .App #palette {
+  .App #paletteContainer {
     width: 7vw;
     max-width: 80%;
-    display: grid;
-    grid-template-columns: 50% 50%;
     margin: 5%;
     margin-bottom: auto; }
-    .App #palette .color {
-      height: 0;
-      padding-top: 100%; }
+    .App #paletteContainer #palette {
+      display: grid;
+      grid-template-columns: 50% 50%; }
+      .App #paletteContainer #palette .color {
+        height: 0;
+        padding-top: 100%; }
+    .App #paletteContainer #paletteButtons {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end; }
   .App #quilt {
     width: 100vh;
     height: 100vh;
