--- a/src/css/App.css
+++ b/src/css/App.css
@@ -28,6 +28,8 @@
   .App input[type=button] {
     width: 100%;
     border: 1px solid #888;
+    border-radius: 0;
+    border-bottom: none;
     background: #fff;
     background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#fff));
     background: -webkit-linear-gradient(top, #ccc, #fff);
@@ -45,7 +47,8 @@
     background: -moz-linear-gradient(top, #999, #ccc);
     background: -ms-linear-gradient(top, #999, #ccc);
     background: -o-linear-gradient(top, #999, #ccc);
-    border: 1px solid #555; }
+    border: 1px solid #555;
+    border-bottom: none; }
   .App input[type=button]:active {
     background: #bbb;
     background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#bbb));
@@ -53,7 +56,8 @@
     background: -moz-linear-gradient(top, #888, #bbb);
     background: -ms-linear-gradient(top, #888, #bbb);
     background: -o-linear-gradient(top, #888, #bbb);
-    border: 1px solid #444; }
+    border: 1px solid #444;
+    border-bottom: none; }
   .App input[type=button]:focus {
     outline: 0; }
   .App .palette {
@@ -66,10 +70,7 @@
         flex-direction: column;
         justify-content: flex-end; }
         .App .palette .picker div input[type=button] {
-          width: calc(7vw + 6px);
-          border-bottom: none; }
-        .App .palette .picker div input[type=button]:hover, .App .palette .picker div input[type=button]:active {
-          border-bottom: none; }
+          width: calc(7vw + 6px); }
     .App .palette input[type='color'] {
       width: 7vw;
       height: 7vw; }
