✅ Updated dependencies and solved CSS focus issue

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -67,6 +67,8 @@
 
     input[type=button]:focus {
         outline: 0;
+        border: 1px solid #545454;
+        border-bottom: none;
     }
 
     .palette {
