--- a/src/css/App.css
+++ b/src/css/App.css
@@ -59,7 +59,9 @@
     border: 1px solid #444;
     border-bottom: none; }
   .App input[type=button]:focus {
-    outline: 0; }
+    outline: 0;
+    border: 1px solid #545454;
+    border-bottom: none; }
   .App .palette {
     background-position: left top;
     display: flex; }
