--- a/src/css/App.css
+++ b/src/css/App.css
@@ -16,6 +16,15 @@
     box-sizing: border-box;
     background-image: url("../images/tile.png");
     background-size: 100%; }
+  .App #loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 48px;
+    height: 48px;
+    transform: translate(-50%, -50%);
+    background-image: none;
+    color: #868686; }
   .App .splash {
     background-position: right top; }
     .App .splash p {
