--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -28,6 +28,16 @@
         background-size: 100%;
     }
 
+    #loading {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 48px; height: 48px;
+        transform: translate(-50%, -50%);
+        background-image: none;
+        color: #868686;
+    }
+
     .splash {
         background-position: right top;
 
