--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,10 @@
   font-family: karmaticArcade;
   src: url("../fonts/karmatic-arcade.ttf") format("truetype"); }
 
+@font-face {
+  font-family: tokyo;
+  src: url("../fonts/mplus-2p-thin-sub.ttf") format("truetype"); }
+
 .App {
   width: 100vw;
   height: 100vh;
@@ -16,6 +20,104 @@
     box-sizing: border-box;
     background-image: url("../images/tile.png");
     background-size: 100%; }
+  .App #intro {
+    width: 70vw;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-size: 30%;
+    border: 1px solid #888;
+    filter: brightness(95%);
+    padding: 5%;
+    font-family: tokyo;
+    font-weight: bold;
+    font-size: 1.8vw;
+    z-index: 1; }
+    .App #intro span {
+      padding-left: 1%;
+      font-family: karmaticArcade;
+      font-size: 2vw;
+      -webkit-mask-image: linear-gradient(to top, black, rgba(0, 0, 0, 0.7) 50%, black); }
+    .App #intro #title {
+      font-size: 2.8vw; }
+    .App #intro #description {
+      width: 100%; }
+    .App #intro #show {
+      width: 20%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 7vh 0 2vh 0; }
+      .App #intro #show input[type=checkbox] {
+        outline: none;
+        position: relative;
+        width: 2%;
+        height: 2%;
+        -webkit-appearance: none;
+        background-color: #fafafa;
+        border: 1px solid #cacece;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+        padding: 5%;
+        margin-right: 5%;
+        border-radius: 3px;
+        display: inline-block; }
+      .App #intro #show input[type=checkbox]:active, .App #intro #show input[type=checkbox]:checked:active {
+        outline: none;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px 1px 3px rgba(0, 0, 0, 0.1); }
+      .App #intro #show input[type=checkbox]:checked {
+        outline: none;
+        background-color: #e9ecee;
+        border: 1px solid #adb8c0;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1);
+        color: #99a1a7; }
+      .App #intro #show input[type=checkbox]:checked:after {
+        outline: none;
+        content: '\2714';
+        font-size: 14px;
+        position: absolute;
+        top: 0px;
+        left: 3px;
+        color: #99a1a7; }
+      .App #intro #show span {
+        font-family: tokyo;
+        font-size: 1.2vw; }
+    .App #intro #showEnter {
+      width: 20%; }
+      .App #intro #showEnter input[type=button] {
+        border-bottom: 1px solid #888;
+        background: #fff;
+        background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#fff));
+        background: -webkit-linear-gradient(top, #ccc, #fff);
+        background: -moz-linear-gradient(top, #ccc, #fff);
+        background: -ms-linear-gradient(top, #ccc, #fff);
+        background: -o-linear-gradient(top, #ccc, #fff);
+        text-shadow: rgba(0, 0, 0, 0.2) 0 1px 0;
+        color: black;
+        font-size: 1.5vw; }
+      .App #intro #showEnter input[type=button]:hover {
+        background: #ccc;
+        background: -webkit-gradient(linear, left top, left bottom, from(#999), to(#ccc));
+        background: -webkit-linear-gradient(top, #999, #ccc);
+        background: -moz-linear-gradient(top, #999, #ccc);
+        background: -ms-linear-gradient(top, #999, #ccc);
+        background: -o-linear-gradient(top, #999, #ccc);
+        border: 1px solid #555; }
+      .App #intro #showEnter input[type=button]:active {
+        background: #bbb;
+        background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#bbb));
+        background: -webkit-linear-gradient(top, #888, #bbb);
+        background: -moz-linear-gradient(top, #888, #bbb);
+        background: -ms-linear-gradient(top, #888, #bbb);
+        background: -o-linear-gradient(top, #888, #bbb);
+        border: 1px solid #444; }
+      .App #intro #showEnter input[type=button]:focus {
+        outline: 0;
+        border: 1px solid #545454; }
   .App #loading {
     position: absolute;
     top: 50%;
@@ -48,7 +150,8 @@
     text-shadow: rgba(0, 0, 0, 0.2) 0 1px 0;
     color: black;
     font-size: 0.8vw;
-    font-family: Georgia, serif; }
+    font-family: tokyo;
+    font-weight: bold; }
   .App input[type=button]:hover {
     background: #ccc;
     background: -webkit-gradient(linear, left top, left bottom, from(#999), to(#ccc));
