--- a/src/css/App.css
+++ b/src/css/App.css
@@ -65,7 +65,8 @@
         padding: 5%;
         margin-right: 5%;
         border-radius: 3px;
-        display: inline-block; }
+        display: inline-block;
+        outline: 0; }
       .App #intro #show input[type=checkbox]:active, .App #intro #show input[type=checkbox]:checked:active {
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0 1px 3px rgba(0, 0, 0, 0.1); }
       .App #intro #show input[type=checkbox]:checked {
@@ -81,7 +82,8 @@
         left: 3px;
         color: #99a1a7; }
       .App #intro #show input[type=checkbox]:checked:focus {
-        outline: none; }
+        outline: 0;
+        border: 1px solid #545454; }
       .App #intro #show span {
         font-family: tokyo;
         font-size: 1.2vw; }
