--- a/src/css/App.css
+++ b/src/css/App.css
@@ -65,8 +65,7 @@
         padding: 5%;
         margin-right: 5%;
         border-radius: 3px;
-        display: inline-block;
-        outline: 0; }
+        display: inline-block; }
       .App #intro #show input[type=checkbox]:active, .App #intro #show input[type=checkbox]:checked:active {
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0 1px 3px rgba(0, 0, 0, 0.1); }
       .App #intro #show input[type=checkbox]:checked {
