🎨 Updated fallback background-color

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -29,6 +29,7 @@
         width: calc(100vw / 2 - 100vh / 2);
         height: 100vh;
         box-sizing: border-box;
+        background-color: #fff;
         background-image: url('../images/tile.png');
         background-size: 100%;
     }
