--- a/src/css/App.css
+++ b/src/css/App.css
@@ -18,6 +18,7 @@
     width: calc(100vw / 2 - 100vh / 2);
     height: 100vh;
     box-sizing: border-box;
+    background-color: #fff;
     background-image: url("../images/tile.png");
     background-size: 100%; }
   .App #intro {
