--- a/src/css/App.css
+++ b/src/css/App.css
@@ -43,6 +43,7 @@
       padding-left: 1%;
       font-family: karmaticArcade;
       font-size: 2vw;
+      line-height: 200%;
       -webkit-mask-image: linear-gradient(to top, black, rgba(0, 0, 0, 0.7) 50%, black); }
     .App #intro #title {
       font-size: 2.8vw; }
@@ -53,7 +54,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 7vh 0 2vh 0; }
+      margin: 4vh 0 2vh 0; }
       .App #intro #show input[type=checkbox] {
         position: relative;
         width: 2%;
@@ -137,6 +138,11 @@
       font-family: karmaticArcade;
       font-size: calc(100vw / 12 - 100vh / 12);
       -webkit-mask-image: linear-gradient(to top, black, rgba(0, 0, 0, 0.7) 50%, black); }
+      .App .splash p span {
+        font-size: 0.8vw;
+        line-height: 300%;
+        padding-left: 1vw;
+        vertical-align: top; }
   .App input[type=button] {
     width: 100%;
     border: 1px solid #888;
@@ -195,6 +201,8 @@
   .App #paletteContainer {
     width: 7vw;
     max-width: 80%;
+    display: flex;
+    flex-direction: column;
     margin: 5%;
     margin-bottom: auto; }
     .App #paletteContainer #palette {
@@ -203,10 +211,16 @@
       .App #paletteContainer #palette .color {
         height: 0;
         padding-top: 100%; }
-    .App #paletteContainer #paletteButtons {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end; }
+    .App #paletteContainer .eyedropper {
+      border: 1px solid #555; }
+    .App #paletteContainer .eyedropper_down {
+      background: #bbb;
+      background: -webkit-gradient(linear, left top, left bottom, from(#888), to(#bbb));
+      background: -webkit-linear-gradient(top, #888, #bbb);
+      background: -moz-linear-gradient(top, #888, #bbb);
+      background: -ms-linear-gradient(top, #888, #bbb);
+      background: -o-linear-gradient(top, #888, #bbb);
+      border: 1px solid #444; }
   .App #quilt {
     width: 100vh;
     height: 100vh;
